feat: scaffold model

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -1,4 +1,6 @@
 # Iter:   3000,  Train Loss: 0.552,  Train Acc: 100.000%,  Val Loss: 0.725,  Val Acc: 82.314%,  Time: 0:05:56 *
 
+# Git 1ff9483c03354473058f4dd54be2a863f7ff84e1
+
 report_step: 200
 batch_size: 8
